7-VoteService.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote
spec:
  selector:
    app: vote
  ports:
  - port: 80
    targetPort: 80
    name: vote
  type: NodePort
